[project]
name = "junocamprojection"
version = "0.1.0"
description = "This is a tool to process and project JunoCam images onto a lat/lon grid"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.3",
    "cartopy>=0.24.1",
    "healpy>=1.18.0",
    "matplotlib==3.10.1",
    "netcdf4==1.7.2",
    "numpy==2.2.3",
    "pyproj>=3.7.1",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spicepy>=1.0.5",
    "spiceypy>=6.0.0",
    "tqdm>=4.67.1",
]
