[build-system]
requires = ["setuptools >= 74.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["junocam_projection"]
exclude = []
namespaces = false

[project]
name = "junocam_projection"
version = "0.9"
license = { file = 'LICENSE' }
description = 'projection pipeline for JunoCam images'
requires-python = ">=3.10"
dependencies = [
	'beautifulsoup4>=4.13.3',
	'Cartopy>=0.23.0',
	'matplotlib>=3.10.1',
	'netCDF4>=1.7.2',
	'numpy>=2.2.4',
	'numba>=0.61.2',
	'pyproj>=3.6.1',
	'rasterio>=1.3.10',
	'Requests>=2.32.3',
	'scikit_learn>=1.6.1',
	'scipy>=1.15.2',
	'scikit_image>=0.25.2',
	'spiceypy>=6.0.0',
	'tqdm>=4.66.5',
]
keywords = ["junocam", "planetary-imaging", "mapping"]
authors = [
    { name = 'Ramanakumar Sankar', email = 'ramanakumar.shankar@gmail.com' },
]
readme = "README.md"

[project.urls]
repository = "https://www.github.com/ramanakumars/JunoCamProjection"
